log in page done

--- a/pages/login.html
+++ b/pages/login.html
@@ -37,64 +37,79 @@
   </head>
   <body>
     <div class="container">
-        <div class="row login-container">
-            <!-- Left Image Section -->
-            <div class="col-md-6 d-none d-md-block login-image"></div>
+      <div
+        class="row login-container justify-content-center align-items-center"
+      >
+        <!-- Left Image Section -->
+        <div class="col-md-6 d-none d-md-block login-image"></div>
 
-            <!-- Right Form Section -->
-            <div class="col-md-6 d-flex align-items-center">
-                <div class="login-form w-100">
-                    <!-- Logo -->
-                    <div class="text-center mb-3">
-                        <img src="/assets/images/wealthy health care logo.png" alt="Company Logo" class="img-fluid">
-                    </div>
-
-                    <!-- Welcome Heading -->
-                    <h2 class="text-center mb-3">Welcome Back</h2>
-
-                    <!-- Login Form -->
-                    <form>
-                        <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="Username or Email" required>
-                        </div>
-                        <div class="mb-3">
-                            <input type="password" class="form-control" placeholder="Password" required>
-                        </div>
-
-                        <!-- Remember Me & Forgot Password -->
-                        <div class="remember-me mb-3">
-                            <div>
-                                <input type="checkbox" id="remember">
-                                <label for="remember">Remember Me</label>
-                            </div>
-                            <a href="#" class="text-decoration-none">Forgot Password?</a>
-                        </div>
-
-                        <!-- Login Button -->
-                        <button class="btn btn-primary w-100 mb-3">Login</button>
-
-                        <!-- OR Divider -->
-                        <div class="or-divider mb-3">OR</div>
-
-                        <!-- Continue with Google -->
-                        <a href="#" class="google-btn w-100">
-                            <i class='bx bxl-google-plus me-2'></i>
-                            Continue with Google
-                        </a>
-
-                        <!-- Sign Up Link -->
-                        <p class="text-center mt-3">
-                            Don't have an account? <a href="#" class="text-primary text-decoration-none">Sign Up</a>
-                        </p>
-                    </form>
-                </div>
+        <!-- Right Form Section -->
+        <div class="col-md-6 d-flex align-items-center">
+          <div class="login-form w-100">
+            <!-- Logo -->
+            <div class="text-center mb-3">
+              <img
+                src="/assets/images/wealthy health care logo.png"
+                alt="Company Logo"
+                class="img-fluid" width=""
+              />
             </div>
+
+            <!-- Welcome Heading -->
+            <h2 class="text-center mb-3">Welcome Back</h2>
+
+            <!-- Login Form -->
+            <form>
+              <div class="mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Username or Email"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <input
+                  type="password"
+                  class="form-control"
+                  placeholder="Password"
+                  required
+                />
+              </div>
+
+              <!-- Remember Me & Forgot Password -->
+              <div class="remember-me mb-3 d-flex">
+                <div>
+                  <input type="checkbox" id="remember" />
+                  <label for="remember">Remember Me</label>
+                </div>
+                <a href="#" class="text-decoration-none">Forgot Password?</a>
+              </div>
+
+              <!-- Login Button -->
+              <button class="btn btn-submit w-100 mb-3">Login</button>
+
+              <!-- OR Divider -->
+              <div class="or-divider mb-3">OR</div>
+
+              <!-- Continue with Google -->
+              <a href="#" class="google-btn w-100">
+                <i class="bx bxl-google-plus me-2"></i>
+                Continue with Google
+              </a>
+
+              <!-- Sign Up Link -->
+              <p class="text-center mt-3">
+                Don't have an account?
+                <a href="#" class="text-primary text-decoration-none"
+                  >Sign Up</a
+                >
+              </p>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
-
-
-
-
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/js/script.js"></script>
