--- a/pages/career.html
+++ b/pages/career.html
@@ -69,7 +69,7 @@
         </li>
         <li>
           <a
-            href="/pages/getinvolve.html"
+            href="/pages/login.html"
             style="--i: 6"
             class="nav-link get-involved"
             >log In</a
