--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </li>
         <li>
           <a
-            href="/pages/getinvolve.html"
+            href="/pages/login.html"
             style="--i: 6"
             class="nav-link get-involved"
             >log In</a
@@ -77,7 +77,7 @@
         </li>
         <li>
           <a
-            href="/pages/contact.html"
+            href="/pages/account.html"
             style="--i: 7"
             class="nav-link contact-us"
             >Get Started</a
@@ -106,7 +106,7 @@
               Our expert team is dedicated to offering exceptional care tailored
               to your needs.
             </p>
-            <a href="#" class="btn book-btn">Book Appointment</a>
+            <a href="/pages/booking.html" class="btn book-btn">Book Appointment</a>
           </div>
         </div>
       </div>
@@ -116,7 +116,9 @@
     <section class="knows-us-section py-3">
       <div class="container">
         <!-- Section Title -->
-        <div class="section-title d-flex align-items-center">
+        <div class="section-title d-flex align-items-center" data-aos="fade-down"
+        data-aos-easing="ease-in-sine"
+        data-aos-duration="1000">
           <div class="line"></div>
           <i class="fas fa-arrow-right"></i>
           <h2 class="mt-2">Know About Us</h2>
@@ -124,14 +126,18 @@
 
         <!-- First Row: Image Left, Text Right -->
         <div class="row align-items-center mb-3">
-          <div class="col-lg-5">
+          <div class="col-lg-5" data-aos="zoom-in"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <img
               src="/assets/images/nurse talking.png"
               alt="About Us Image"
               class="img-fluid know-us"
             />
           </div>
-          <div class="col-lg-7 mt-3">
+          <div class="col-lg-7 mt-3" data-aos="fade-up"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <h3 class="about">About Us</h3>
             <p class="">
               At Wealthy Living, your health and well-being are our top
@@ -155,7 +161,9 @@
 
         <!-- Second Row: Text Left, Image Right -->
         <div class="row align-items-center flex-column-reverse flex-lg-row">
-          <div class="col-lg-5 mt-3">
+          <div class="col-lg-5 mt-3" data-aos="fade-down"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <p class="">
               - Your journey to better your health starts here. <br />
               Let's achieve your wellness goals together!
@@ -166,7 +174,9 @@
               Thank you for choosing Wealthy Living Healthcare Services!
             </p>
           </div>
-          <div class="col-lg-7">
+          <div class="col-lg-7" data-aos="zoom-in"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <img
               src="/assets/images/blacky.png"
               alt="Our Values Image"
@@ -181,7 +191,9 @@
     <section class="our-services-section py-3">
       <div class="container">
         <!-- Section Title Row -->
-        <div class="row align-items-center section-header">
+        <div class="row align-items-center section-header" data-aos="fade-down"
+        data-aos-easing="ease-in-sine"
+        data-aos-duration="1000">
           <div class="col-lg-4 d-flex align-items-center">
             <div class="line"></div>
             <i class="fas fa-arrow-right"></i>
@@ -196,7 +208,9 @@
         <!-- Services Grid -->
         <div class="row g-4 mt-4">
           <!-- Service Item 1 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-up"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service1.png"
@@ -214,7 +228,9 @@
           </div>
 
           <!-- Service Item 2 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-up"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service2.png"
@@ -232,7 +248,9 @@
           </div>
 
           <!-- Service Item 3 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-up"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service3.png"
@@ -250,7 +268,9 @@
           </div>
 
           <!-- Service Item 4 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-up"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service4.png"
@@ -270,7 +290,7 @@
 
         <!-- Learn More Link -->
         <div class="text-center mt-4">
-          <a href="#" class="learn-more btn">Learn More</a>
+          <a href="/pages/services.html" class="learn-more btn">Learn More</a>
         </div>
       </div>
     </section>
@@ -280,7 +300,9 @@
       <div class="container-fluid">
         <div class="row no-gutters">
           <!-- Left Side (Text + Overlay) -->
-          <div class="col-lg-6 speciality-left">
+          <div class="col-lg-6 speciality-left" data-aos="fade-up"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <div class="overlay"></div>
             <div class="content">
               <div class="speciality-text">
@@ -346,7 +368,9 @@
           </div>
 
           <!-- Right Side (Image) -->
-          <div class="col-lg-6 speciality-right">
+          <div class="col-lg-6 speciality-right" data-aos="fade-down"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000">
             <img
               src="/assets/images/special-doctors.png"
               alt="Healthcare Professionals"
@@ -360,14 +384,18 @@
     <section class="testimonials-section p-3">
       <div class="container">
         <!-- Section Title -->
-        <div class="text-center mb-5">
+        <div class="text-center mb-5" data-aos="fade-down"
+        data-aos-easing="ease-in-sine"
+        data-aos-duration="1000">
           <h2 class="">Testimonials</h2>
           <h4 class="section-subtitle">What Our Clients Say About Us</h4>
         </div>
 
         <!-- Testimonials Grid -->
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -388,7 +416,9 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1500">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -409,7 +439,9 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -430,7 +462,9 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1500">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -457,7 +491,9 @@
     <section class="mission-vision-section p-3">
       <div class="container">
         <!-- Section Title Row -->
-        <div class="row align-items-center section-header">
+        <div class="row align-items-center section-header" data-aos="fade-down"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">
           <div class="col-lg-4 d-flex align-items-center">
             <div class="line"></div>
             <i class="fas fa-arrow-right"></i>
@@ -471,7 +507,9 @@
 
         <!-- First Row -->
         <div class="row align-items-center">
-          <div class="col-lg-6 col-md-12 text-center text-lg-start">
+          <div class="col-lg-6 col-md-12 text-center text-lg-start" data-aos="zoom-in-up"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <img
               src="/assets/images/mision-vision.png"
               alt="Our Mission"
@@ -479,7 +517,9 @@
             />
           </div>
           <div class="col-lg-6 col-md-12">
-            <p class="intro-text my-4">
+            <p class="intro-text my-4" data-aos="fade-down"
+            data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000">
               At Wealthy Living Healthcare, we specialized in delivering
               compassionate and comprehensive home health services, icluding
               Home Health Aids, Home Rehabilitation, Medical Social Work, IV
@@ -489,7 +529,9 @@
               their indipendence in the comfort of their own homes.
             </p>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="flip-right"
+              data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+              data-aos-duration="1000">
                 <div class="mission-box text-start">
                   <h3>Our Mission</h3>
                   <p>
@@ -499,7 +541,9 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="flip-right"
+              data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+              data-aos-duration="1500">
                 <div class="vision-box text-start">
                   <h3>Our Vision</h3>
                   <p>
@@ -516,7 +560,9 @@
 
         <!-- Second Row -->
         <div class="row align-items-center mt-5">
-          <div class="col-lg-6 col-md-12 order-2 order-lg-1 story">
+          <div class="col-lg-6 col-md-12 order-2 order-lg-1 story" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <h3 class="story-title">Our Story</h3>
             <p>
               Transforming lives through exceptional care, with a 98% success
@@ -533,7 +579,9 @@
               their own homes.
             </p>
           </div>
-          <div class="col-lg-6 col-md-12 order-1 order-lg-2 text-center">
+          <div class="col-lg-6 col-md-12 order-1 order-lg-2 text-center" data-aos="zoom-in-up"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <img
               src="/assets/images/story.png"
               alt="Our History"
@@ -545,7 +593,9 @@
     </section>
 
     <!-- Footer Section---- -->
-    <footer class="footer-section">
+    <footer class="footer-section" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="container">
         <!-- Logo -->
         <div class="row">
