services page linked

--- a/pages/services.html
+++ b/pages/services.html
@@ -69,7 +69,7 @@
         </li>
         <li>
           <a
-            href="/pages/getinvolve.html"
+            href="/pages/login.html"
             style="--i: 6"
             class="nav-link get-involved"
             >log In</a
@@ -77,7 +77,7 @@
         </li>
         <li>
           <a
-            href="/pages/contact.html"
+            href="/pages/account.html"
             style="--i: 7"
             class="nav-link contact-us"
             >Get Started</a
@@ -88,7 +88,9 @@
     </header>
 
     <!-- Service Home Section -->
-    <section class="service-home">
+    <section class="service-home" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="overlay"></div>
       <div class="container text-center">
         <h1 class="service-title">Our Healthcare Services</h1>
@@ -107,7 +109,9 @@
 
         <!-- First Row: Image Left, Text Right -->
         <div class="row align-items-center mb-3">
-          <div class="col-lg-7 mt-3">
+          <div class="col-lg-7 mt-3" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <h3 class="about">About Us</h3>
             <p class="">
               At Wealthy Living, your health and well-being are our top
@@ -127,7 +131,9 @@
               you every step of the way.
             </p>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-5" data-aos="zoom-in-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <img
               src="/assets/images/service-know.png"
               alt="About Us Image"
@@ -142,7 +148,9 @@
     <section class="our-services-section py-3">
       <div class="container">
         <!-- Section Title Row -->
-        <div class="row align-items-center section-header">
+        <div class="row align-items-center section-header" data-aos="fade-down"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">
           <div class="col-lg-4 d-flex align-items-center">
             <div class="line"></div>
             <i class="fas fa-arrow-right"></i>
@@ -157,7 +165,9 @@
         <!-- Services Grid -->
         <div class="row g-4 my-4">
           <!-- Service Item 1 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service1.png"
@@ -175,7 +185,9 @@
           </div>
 
           <!-- Service Item 2 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service2.png"
@@ -193,7 +205,9 @@
           </div>
 
           <!-- Service Item 3 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service3.png"
@@ -211,7 +225,9 @@
           </div>
 
           <!-- Service Item 4 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service4.png"
@@ -229,7 +245,9 @@
           </div>
 
           <!-- Service Item 5 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service5.png"
@@ -247,7 +265,9 @@
           </div>
 
           <!-- Service Item 6 -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-down"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service6.png"
@@ -268,7 +288,9 @@
     </section>
 
     <!-- Empower Section------ -->
-    <section class="empower-section d-flex align-items-center mb-3">
+    <section class="empower-section d-flex align-items-center mb-3" data-aos="fade-up"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -276,7 +298,7 @@
               We Empower Our Clients With Transformative, Lasting Oriented
               Solutions
             </h2>
-            <a href="#" class="empower-btn btn">Book Now</a>
+            <a href="/pages/booking.html" class="empower-btn btn">Book Now</a>
           </div>
         </div>
       </div>
@@ -286,14 +308,18 @@
     <section class="testimonials-section p-3">
       <div class="container">
         <!-- Section Title -->
-        <div class="text-center mb-5">
+        <div class="text-center mb-5" data-aos="fade-down"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">
           <h2 class="">Testimonials</h2>
           <h4 class="section-subtitle">What Our Clients Say About Us</h4>
         </div>
 
         <!-- Testimonials Grid -->
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -314,7 +340,9 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1500">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -335,7 +363,9 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -356,7 +386,9 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1500">
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -380,7 +412,9 @@
     </section>
 
     <!-- Footer Section---- -->
-    <footer class="footer-section">
+    <footer class="footer-section" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="container">
         <!-- Logo -->
         <div class="row">
