blogs page linked

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -77,7 +77,7 @@
         </li>
         <li>
           <a
-            href="/pages/contact.html"
+            href="/pages/account.html"
             style="--i: 7"
             class="nav-link contact-us"
             >Get Started</a
@@ -88,7 +88,9 @@
     </header>
 
     <!-- Service Home Section -->
-    <section class="blogs-home">
+    <section class="blogs-home" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="overlay"></div>
       <div class="container text-center">
         <h1 class="service-title">Our Blogs</h1>
@@ -99,7 +101,9 @@
    <section class="blog-section py-3">
     <div class="container">
         <!-- Breadcrumb and Social Media Icons -->
-        <div class="d-flex justify-content-between align-items-center mb-3">
+        <div class="d-flex justify-content-between align-items-center mb-3" data-aos="fade-up"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">
             <h5 class="text-primary">Blog > Healthcare</h5>
             <div class="blogs-social-icons">
                 <a href="#" class="me-3"><i class="fab fa-facebook-f"></i></a>
@@ -109,20 +113,28 @@
         </div>
 
         <!-- Blog Title -->
-        <h1 class="blogs-heading">The Future of Healthcare: Innovations and Challenges</h1>
+        <h1 class="blogs-heading" data-aos="fade-down"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">The Future of Healthcare: Innovations and Challenges</h1>
 
         <!-- Introduction Content -->
-        <p class="intro-text">
+        <p class="intro-text" data-aos="fade-down"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">
             Healthcare is evolving at an unprecedented pace, driven by technology, research, and patient-centered care.  
             With new innovations emerging, the medical industry faces both opportunities and challenges.  
             In this article, we explore the key advancements shaping the future of healthcare.
         </p>
 
         <!-- Featured Image -->
-        <img src="/assets/images/blog-home.avif" alt="Healthcare Innovation" class="img-fluid rounded my-4">
+        <img src="/assets/images/blog-home.avif" alt="Healthcare Innovation" class="img-fluid rounded my-4" data-aos="zoom-in-up"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">
 
         <!-- Blog Content -->
-        <div class="blog-content">
+        <div class="blog-content" data-aos="fade-down"
+        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000">
             <h3>1. The Role of Artificial Intelligence</h3>
             <p>
                 AI-powered diagnostics and predictive analytics are revolutionizing patient care,  
@@ -162,7 +174,9 @@
         <!-- Stories Grid -->
         <div class="row g-4">
             <!-- Story Item 1 -->
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-up"
+            data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000">
                 <div class="story-item">
                     <img src="/assets/images/pediatrics.avif" alt="Story 1" class="img-fluid rounded mb-4">
                     <div class="story-meta d-flex justify-content-between align-items-center px-3 py-2">
@@ -178,7 +192,9 @@
             </div>
 
             <!-- Story Item 2 -->
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-up"
+            data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000">
                 <div class="story-item">
                     <img src="/assets/images/blog2.jpg" alt="Story 2" class="img-fluid rounded mb-4">
                     <div class="story-meta d-flex justify-content-between align-items-center px-3 py-2">
@@ -194,7 +210,9 @@
             </div>
 
             <!-- Story Item 3 -->
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-up"
+            data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000">
                 <div class="story-item">
                     <img src="/assets/images/empower.jpg" alt="Story 3" class="img-fluid rounded mb-4">
                     <div class="story-meta d-flex justify-content-between align-items-center px-3 py-2">
@@ -210,7 +228,9 @@
             </div>
 
             <!-- Story Item 4 -->
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-up"
+            data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000">
                 <div class="story-item">
                     <img src="/assets/images/story2.png" alt="Story 4" class="img-fluid rounded mb-4">
                     <div class="story-meta d-flex justify-content-between align-items-center px-3 py-2">
@@ -231,7 +251,9 @@
     
 
     <!-- Empower Section------ -->
-    <section class="empower-section d-flex align-items-center my-5">
+    <section class="empower-section d-flex align-items-center my-5" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -239,7 +261,7 @@
               We Empower Our Clients With Transformative, Lasting Oriented
               Solutions
             </h2>
-            <a href="#" class="empower-btn btn">Book Now</a>
+            <a href="/pages/booking.html" class="empower-btn btn">Book Now</a>
           </div>
         </div>
       </div>
@@ -247,7 +269,9 @@
 
 
     <!-- Footer Section---- -->
-    <footer class="footer-section">
+    <footer class="footer-section" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="container">
         <!-- Logo -->
         <div class="row">
