--- a/pages/career.html
+++ b/pages/career.html
@@ -77,7 +77,7 @@
         </li>
         <li>
           <a
-            href="/pages/contact.html"
+            href="/pages/account.html"
             style="--i: 7"
             class="nav-link contact-us"
             >Get Started</a
@@ -88,7 +88,9 @@
     </header>
 
     <!-- Service Home Section -->
-    <section class="career-home">
+    <section class="career-home" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="overlay"></div>
       <div class="container text-center">
         <h1 class="service-title">Career Mode</h1>
@@ -96,7 +98,9 @@
     </section>
 
     <!-- Career Intro Section -->
-    <section class="career-intro pt-3">
+    <section class="career-intro pt-3" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="container text-center">
         <!-- Join Heading Content -->
 
@@ -121,7 +125,9 @@
     </section>
 
     <!--Personal Information Form -->
-    <div class="container mt-3">
+    <div class="container mt-3" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <!-- Required Information Notice -->
       <p class="required-info">* Required Information</p>
 
@@ -339,7 +345,9 @@
     </div>
 
     <!-- Education Information form---- -->
-    <div class="container mt-3">
+    <div class="container mt-3" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <!-- Section Title -->
       <h4 class="section-heading text-center">
         Educational Information
@@ -429,7 +437,9 @@
     </div>
 
     <!-- Certificates Form------- -->
-    <div class="container my-3">
+    <div class="container my-3" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <!-- Colored Heading -->
       <h4 class="section-heading text-center">
         Certificate & Licenses
@@ -481,7 +491,9 @@
     </div>
 
     <!-- Employment form------ -->
-    <div class="container my-3">
+    <div class="container my-3" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <!-- Colored Heading -->
       <h4 class="section-heading text-center">Employment History</h4>
 
@@ -638,7 +650,9 @@
     </div>
 
     <!-- Transportation form----------- -->
-    <div class="container my-3">
+    <div class="container my-3" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <!-- Colored Heading -->
       <h4 class="section-heading text-center">Transportation</h4>
       <!-- Notice Text -->
@@ -751,7 +765,9 @@
       </form>
     </div>
     <!-- Notice form------------ -->
-    <div class="container my-3">
+    <div class="container my-3" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <!-- Colored Title -->
       <div class="notice-title">NOTICE TO PROSPECTIVE EMPLOYEES</div>
 
@@ -923,7 +939,9 @@
     </div>
 
     <!-- Footer Section---- -->
-    <footer class="footer-section">
+    <footer class="footer-section" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="container">
         <!-- Logo -->
         <div class="row">
