--- a/pages/contact.html
+++ b/pages/contact.html
@@ -69,7 +69,7 @@
         </li>
         <li>
           <a
-            href="/pages/getinvolve.html"
+            href="/pages/login.html"
             style="--i: 6"
             class="nav-link get-involved"
             >log In</a
@@ -77,7 +77,7 @@
         </li>
         <li>
           <a
-            href="/pages/contact.html"
+            href="/pages/account.html"
             style="--i: 7"
             class="nav-link contact-us"
             >Get Started</a
@@ -88,7 +88,9 @@
     </header>
 
     <!-- Service Home Section -->
-    <section class="contact-home">
+    <section class="contact-home" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="overlay"></div>
       <div class="container text-center">
         <h1 class="service-title">Contact us</h1>
@@ -99,7 +101,9 @@
       <div class="container">
         <div class="row">
           <!-- Email Item -->
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="contact-items">
               <div class="icon mb-2">
                 <i class="fas fa-envelope fa-2x" style="color: #767676"></i>
@@ -113,7 +117,9 @@
           </div>
 
           <!-- Location Item -->
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1300">
             <div class="contact-items">
               <div class="icon mb-2">
                 <i
@@ -128,7 +134,9 @@
           </div>
 
           <!-- Phone Item -->
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="flip-right"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1500">
             <div class="contact-items">
               <div class="icon mb-2">
                 <i class="fas fa-phone-alt fa-2x" style="color: #767676"></i>
@@ -147,7 +155,9 @@
       <div class="container">
         <div class="row align-items-center">
           <!-- Left Column: Contact Form -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-up"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <div class="contact-form">
               <!-- p5 Heading (Tagline) -->
               <p class="text-uppercase text-dark mb-1">Get Connected</p>
@@ -195,7 +205,9 @@
             </div>
           </div>
           <!-- Right Column: Image -->
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="zoom-in-up"
+          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000">
             <img
               src="/assets/images/contact.png"
               alt="Contact Us Image"
@@ -242,7 +254,9 @@
     </div>
 
     <!-- Footer Section---- -->
-    <footer class="footer-section">
+    <footer class="footer-section" data-aos="fade-down"
+    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
+    data-aos-duration="1000">
       <div class="container">
         <!-- Logo -->
         <div class="row">
