carrer page adjusted

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 my-5">
-            <p class="welcome-text">Welcome to</p>
+            <p class="welcomes-text">Welcome to</p>
             <h1><span class="text-orange">Wealthy</span> Living</h1>
             <h1>Health<span class="text-green">care</span> Service</h1>
             <p class="description">
@@ -529,7 +529,7 @@
               their indipendence in the comfort of their own homes.
             </p>
             <div class="row">
-              <div class="col-md-6" data-aos="flip-right"
+              <div class="col-md-6" data-aos="flip-down"
               data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
               data-aos-duration="1000">
                 <div class="mission-box text-start">
@@ -541,7 +541,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-6" data-aos="flip-right"
+              <div class="col-md-6" data-aos="flip-down"
               data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
               data-aos-duration="1500">
                 <div class="vision-box text-start">
