--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -40,7 +40,7 @@
     <header class="fixed-top">
       <div class="logo">
         <img
-          src="/assets/images/wealthy health care logo.png"
+          src="/assets/images/new-logo.png"
           alt="wealthy living Logo"
         />
       </div>
@@ -277,7 +277,7 @@
         <div class="row">
           <div class="col-12">
             <img
-              src="/assets/images/wealthy health care logo.png"
+              src="/assets/images/new-logo.png"
               alt="Wealth Living Healthcare"
               class="footer-logo"
             />
