--- a/pages/login.html
+++ b/pages/login.html
@@ -49,7 +49,7 @@
             <!-- Logo -->
             <div class="text-center mb-3">
               <img
-                src="/assets/images/wealthy health care logo.png"
+                src="/assets/images/new-logo.png"
                 alt="Company Logo"
                 class="img-fluid" width=""
               />
